# Emotion-Driven-Robot

./: LICENSE  README.md
install/: local_setup.sh  setup.sh
install/emotion_bot/share/emotion_bot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/emotion_bot/: package.xml  setup.cfg  setup.py
src/emotion_bot/emotion_bot/: emotion_bot_node.py  emotion_node.py
