<?xml version="1.0"?>
<package format="3">
  <name>emotion_bot</name>
  <version>0.0.1</version>
  <description>Emotion-driven TurtleBot3 using camera and emojis</description>
  <maintainer email="parallels@example.com">Parallels</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
<buildtool_depend>ament_python</buildtool_depend>
<exec_depend>rclpy</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>cv_bridge</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>opencv-python</exec_depend>
<exec_depend>pyqt5</exec_depend>
<exec_depend>numpy</exec_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
